--- a/quickstart/hugo.toml
+++ b/quickstart/hugo.toml
@@ -20,7 +20,7 @@ enableRobotsTXT = true
     size = "h-14"
 
   [params.site]
-    name = "Tella"
+    name = "Progressive Reality Technology"
 
   [params.icon]
     #If you want to use FontAwesome, set this parameter to true.
